# vd-link

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  MenuStructure.md  Readme.md  lv_conf.h  vd-link-drone.code-workspace  vd-link-gs.code-workspace  version.h
docker/: .gitignore  Dockerfile.rk3566  Dockerfile.rv1126  docker.sh  kill_vd_link.sh  readme.md
docker/gs/: create-docker.sh  readme.md
docs/: CAMERA_DETECTION.md  HLD.md  LLD.md  PLUGINS.md  TELEMETRY_README.md
drone/: CMakeLists.txt
drone/assets/: vd-link.config
drone/assets/ai_model/: default_anchors.txt
drone/bytetrack/: CMakeLists.txt  bytetrack_api.cpp
drone/detection/: CMakeLists.txt  detection.h  detection_types.h  postprocess.cpp  postprocess.h
drone/src/: camera_csi.c  camera_csi.h  camera_usb.c  common.h  encoder.c  encoder.h  main.c  rtp_streamer.c  rtp_streamer.h
drone/src/addons/: addons.c  addons.h  subsystem_api.c  subsystem_api.h
drone/src/addons/plugins/: CMakeLists.txt
drone/src/addons/plugins/sample_addon/: CMakeLists.txt  sample_addon.c
drone/src/camera/: camera.c  camera.h  camera_csi.c  camera_csi.h  camera_manager.c  camera_manager.h  camera_usb.c  camera_usb.h
drone/src/camera/isp/: sample_common_isp.c
drone/src/config/: config_parser.c  config_parser.h  drone_name.c  drone_name.h
drone/src/detection/: CMakeLists.txt  detection.cpp  detection_stream.c  detection_stream.h  rknn_npu.cpp  rknn_npu.h
drone/src/encoder/: encoder.c  encoder.h  overlay.c  overlay.h
drone/src/fc_conn/: CMakeLists.txt  fc_conn.c  fc_conn.h  msp_interface.c  msp_interface.h
drone/src/hal/: cpuinfo.c  cpuinfo.h  lte_modem.c  lte_modem.h  transport.c  transport.h
drone/src/link_callbacks/: link_callbacks.c  link_callbacks.h
drone/src/lte_modem/: lte_modem.c  lte_modem.h
drone/src/msp/: CMakeLists.txt  fc_conn.c  fc_conn.h  msp.h  msp_interface.c  msp_interface.h  serial.c
drone/src/msp-osd/: msp_osd.c  msp_osd.h
drone/src/proxy/: proxy.c  proxy.h
drone/src/remote_client/: remote_client.c  remote_client.h
drone/src/rknn/: overlay.c  overlay.h  rknn.c  rknn.h
drone/src/rknn/yolov5/: postprocess.c  postprocess.h  postprocess_new.c  postprocess_new.h  rknn_yolov5.c  rknn_yolov5.h  yolov5.c  yolov5.h
drone/src/rtp_streamer/: rtp_streamer.c  rtp_streamer.h
drone/src/sample_isp/: rkmedia_common.h  sample_common.h
drone/src/screensaver/: screensaver.c  screensaver.h
drone/src/uart/: uart.c  uart.h
gs/: CMakeLists.txt
gs/lvgl/env_support/cmake/: os_desktop.cmake  version.cmake
gs/lvgl/src/others/sysmon/: lv_sysmon.c
gs/src/: common.h  decoder.c  decoder_pc.c  decoder_pc.h  device_type.c  device_type.h  drm_display.c  drm_display.h  lv_conf.h  main.c  msp-osd.c  msp-osd.h  rtp_receiver.c  sdl2_display.c  sdl2_display.h  sdl2_lvgl_input.c  sdl2_lvgl_input.h  wfb_status_link.c  wfb_status_link.h
gs/src/decoder/: decoder.c
gs/src/hal/: display_api.c  display_api.h  wifi_api.c  wifi_api.h
gs/src/link_callbacks/: link_callbacks.c  link_callbacks.h
gs/src/msp-osd/: msp-osd.c  msp-osd.h
gs/src/msp-osd/font/: font.c  font.h  unicode_utils.c  unicode_utils.h
gs/src/msp-osd/msp/: msp.c  msp.h
gs/src/msp-osd/toast/: toast.c
gs/src/msp-osd/util/: debug.h
gs/src/platform/: platform.c  platform.h
gs/src/system/: battery.c  battery.h  conn_api.c  conn_api.h  drone_api.c  drone_api.h  ping.c  ping.h  sys_time.c  sys_time.h  wifi.c  wifi.h
gs/src/ui/: callbacks.c  callbacks.h  input.c  input.h  lv_conf.h  menu.c  menu.h  menu_wifi_settings.c  menu_wifi_settings.h  ui.c  ui.h  ui_files.cmake  ui_interface.c  ui_interface.h
gs/src/ui/callbacks/: callbacks_rtp.c  callbacks_rtp.h  callbacks_wifi.c  callbacks_wifi.h
gs/src/ui/fonts/: montserrat_cyrillic_14.c  montserrat_cyrillic_16.c  montserrat_cyrillic_18.c  montserrat_cyrillic_20.c  montserrat_cyrillic_22.c  montserrat_cyrillic_24.c  montserrat_cyrillic_26.c  montserrat_cyrillic_28.c  montserrat_cyrillic_30.c  montserrat_cyrillic_32.c  montserrat_cyrillic_34.c  montserrat_cyrillic_36.c  montserrat_cyrillic_38.c  montserrat_cyrillic_40.c  montserrat_cyrillic_42.c  montserrat_cyrillic_48.c  montserrat_cyrillic_medium_16.c  montserrat_cyrillic_medium_18.c  montserrat_cyrillic_medium_20.c  montserrat_cyrillic_medium_22.c
gs/src/ui/input/: input.c  input.h
gs/src/ui/lang/: lang.c  lang.h
gs/src/ui/menu/: main_menu.c  main_menu.h  menu_engine.c  menu_engine.h  menu_wifi_settings.c  menu_wifi_settings.h
gs/src/ui/screens/: menu_left.c  menu_left.h  menu_right.c  menu_right.h  screens.c  screens.h  settings.c  settings.h  status.c  status.h
gs/src/ui/ui_interface/: ui_interface.c
include_common/: log.h
lib/bytetrack/: bytetrack_api.h
lib/client/: CMakeLists.txt  README.md  drone_client.c  drone_client.h
lib/ini/: CMakeLists.txt
lib/ini/src/: ini.c  ini.h
lib/link/: CMakeLists.txt  example.c  link.c  link.h
lib/link/proto/: simple.options  simple.proto
lib/link/proto/sub/: unlucky.proto
lib/log/: log.h
lib/msp/: CMakeLists.txt  msp.c
lib/pidfile/: CMakeLists.txt  pidfile.h
librtp/payload/: rtp-h265-unpack.c
link/: link.c
pidfile/: CMakeLists.txt  pidfile.c
src/: common.h  decoder.c  decoder.h  drm_display.c  drm_display.h  log.h  main.c  msp-osd.c  msp-osd.h  rtp_receiver.c  rtp_receiver.h  wfb_status_link.c  wfb_status_link.h
src/msp-osd/fakehd/: fakehd.c  fakehd.h
src/msp-osd/font/: font.c  font.h
src/msp-osd/rec/: rec_shim.h  rec_util.c
src/msp-osd/util/: debug.h  time_util.h
src/ui_interface/: compositor.c  compositor.h  interface_lvgl.c  interface_lvgl.h  joystick.c  joystick.h  lv_conf.h  menu copy.c  menu.c  menu.h  menu_events.c  menu_events.h  menu_navigation.c  tracked_timer.c  tracked_timer.h  ui_interface.c  ui_interface.h
